# swagger.json
@@ -276,7 +276,7 @@
     "/history/{userId}": {
       "get": {
         "summary": "Get the history of uploaded files for a specific user",
-        "description": "Fetches the list of uploaded files for a specific user. If userId is not provided, it fetches the files of the authenticated user.",
+        "description": "Fetches the list of uploaded files for a specific user. If userId is not provided, it fetches the files of the authenticated user. The response includes details of files that do not exist.",
         "security": [
           {
             "bearerAuth": []
@@ -287,7 +287,7 @@
             "name": "userId",
             "in": "path",
             "description": "The ID of the user whose files history is being fetched. If not provided, the authenticated user's files will be fetched.",
-            "required": true,
+            "required": false,
             "schema": {
               "type": "string"
             }
@@ -295,29 +295,59 @@
         ],
         "responses": {
           "200": {
-            "description": "A list of uploaded files",
+            "description": "A list of uploaded files and missing files information",
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "id": {
-                        "type": "integer"
-                      },
-                      "fileName": {
-                        "type": "string"
-                      },
-                      "uploadedAt": {
-                        "type": "string"
-                      },
-                      "user": {
-                        "type": "string"
-                      },
-                      "downloadUrl": {
-                        "type": "string",
-                        "description": "The URL to download the file"
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "description": "Indicates if the request was successful."
+                    },
+                    "files": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "integer"
+                          },
+                          "fileName": {
+                            "type": "string"
+                          },
+                          "uploadedAt": {
+                            "type": "string"
+                          },
+                          "user": {
+                            "type": "string"
+                          },
+                          "downloadUrl": {
+                            "type": "string",
+                            "description": "The URL to download the file"
+                          }
+                        }
+                      }
+                    },
+                    "missingFiles": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "fileName": {
+                            "type": "string"
+                          },
+                          "fullPath": {
+                            "type": "string",
+                            "description": "The full path of the file that does not exist."
+                          },
+                          "uploadedAt": {
+                            "type": "string"
+                          },
+                          "user": {
+                            "type": "string"
+                          }
+                        }
                       }
                     }
                   }
